hphp/test/slow/wildcard-types/wildcard-in-lambda-hints-fatal.php.expectf

Catchable fatal error: Value returned from closure must be of type HH\vec, int given in %s/test/slow/wildcard-types/wildcard-in-lambda-hints-fatal.php on line 5
